--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -68,7 +68,7 @@
 
                             <div class="main-gray">
                                 <div class="main-name am-text-truncate">{{nickName}}
-                                    <span>{{age}}</span>
+                                    <span>{{age}}岁</span>
                                     {{#if official}}
                                     {{else}}
                                     {{#compare sex}}
