--- a/src/main/webapp/individualInfo.html
+++ b/src/main/webapp/individualInfo.html
@@ -126,7 +126,7 @@
                 喜欢的运动
             </li>
             <li>
-                <a class="ii-href" href="clause.html" ></a>
+                <a class="ii-href" href="clause.html"></a>
                 <i class="am-icon-chevron-right"></i>
                 隐私条款
             </li>
@@ -214,7 +214,7 @@
                 修改成功！
             </div>
             <div class="am-modal-footer">
-                <span class="am-modal-btn">确定</span>
+                <span class="am-modal-btn" onclick="toReload()">确定</span>
             </div>
         </div>
     </div>
