--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -37,11 +37,14 @@
     <link rel="stylesheet" href="assets/css/app.css">
 </head>
 <body class="main-body">
-<ul class="am-list am-list-static am-list-border main-list main-margin" id="main-list">
+<ul class="am-list am-list-static am-list-border main-list main-margin" id="main-list" style="margin-bottom: 30px">
 </ul>
 <div class="main-side-bar">
-    <a href="#" id="imgUrl"><img src="assets/i/add.png" class="main-add"></a>
+    <a href="#" id="imgUrl" style="display: block">
+        <span class="main-add">来一发</span>
+    </a>
 </div>
+<div class="main-null" id="main-null"></div>
 
 <!--[if (gte IE 9)|!(IE)]><!-->
 <script src="assets/js/jquery.min.js"></script>
