main add modify

--- a/src/main/webapp/addDatings.html
+++ b/src/main/webapp/addDatings.html
@@ -186,18 +186,19 @@
     <div class="am-modal-dialog">
         <div class="am-modal-bd">
             请选择对方年龄范围<br/>
-            <!--<input type="text" class="am-modal-prompt-input">-->
-            <label class="am-radio-inline">
-                <input type="radio" value="18－24岁" name="age">18-24岁
-            </label>
-            <br/>
-            <label class="am-radio-inline">
-                <input type="radio" value="25－30岁" name="age">25-30岁
-            </label>
-            <br/>
-            <label class="am-radio-inline">
-                <input type="radio" value="不限" name="age">不&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;限&nbsp;&nbsp;
-            </label>
+            <div style="width: 80px;margin: 0 auto;">
+                <label class="am-radio-inline" style="width: 80px;">
+                    <input type="radio" value="18－24岁" name="age">18-24岁
+                </label>
+                <br/>
+                <label class="am-radio-inline" style="width: 80px;">
+                    <input type="radio" value="25－30岁" name="age">25-30岁
+                </label>
+                <br/>
+                <label class="am-radio-inline" style="width: 80px;">
+                    <input type="radio" value="不限" name="age">不限
+                </label>
+            </div>
         </div>
         <div class="am-modal-footer">
             <span class="am-modal-btn" data-am-modal-cancel>取消</span>
