--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -41,7 +41,7 @@
 </ul>
 <div class="main-side-bar">
     <a href="#" id="imgUrl" style="display: block">
-        <span class="main-add">来一发</span>
+        <span class="main-add">+来一发</span>
     </a>
 </div>
 <div class="main-null" id="main-null"></div>
