--- a/src/main/webapp/timeLine.html
+++ b/src/main/webapp/timeLine.html
@@ -108,7 +108,7 @@
                 <img src="assets/i/sports/run.png">
             </div>
             <div class="cbp_tmlabel">
-                <div><span>{{location}}</span>
+                <div><span class="am-text-truncate tl-location">{{location}}</span>
 
                     <div class="tl-people">
                         <img src="assets/i/people.png" class="tl-icon-people"><span class="tl-green">1/1</span>
