--- a/src/main/webapp/datingRequest.html
+++ b/src/main/webapp/datingRequest.html
@@ -69,8 +69,8 @@
                 </div>
                 <div class="dr-avatar-info">
                     <div class="dr-avatar">
-                        <a href="timeLine.html?userId={{customerId}}">
-                            <img src="{{avatar}}" class="am-img-thumbnail">
+                        <a href="timeLine.html?userId={{customerId}}" class="dr-a">
+                            <img src="{{avatar}}" class="am-img-thumbnail dr-a">
                         </a>
                     </div>
                     <div class="dr-name am-text-truncate">{{nickName}}</div>
