--- a/src/main/webapp/timeLine.html
+++ b/src/main/webapp/timeLine.html
@@ -81,7 +81,7 @@
                 <img src="{{avatar}}" class="tl-avatar-img am-img-thumbnail am-radius">
             </div>
             <div class="tl-user">
-                <span>{{nickName}}</span>
+                <span class="am-text-truncate tl-name">{{nickName}}</span>
                 {{#compare sex}}
                 <p class="am-icon-smile-o"></p>
                 {{else}}
