--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -42,8 +42,8 @@
 <div class="main-side-bar main-top-bar">
     <div class="am-g main-top">
         <div class="am-u-sm-4"><span class="main-top-text">一起躁</span></div>
-        <div class="am-u-sm-4" style="color: grey">躁友信息</div>
-        <div class="am-u-sm-4" style="color: grey">我的信息</div>
+        <div class="am-u-sm-4" style="color: grey"><a id="datingRequest" style="display: block">躁友信息</a></div>
+        <div class="am-u-sm-4" style="color: grey"><a id="individualInfo" style="display: block">我的信息</a></div>
     </div>
 </div>
 <div class="main-side-bar main-bottom-bar">
