official add &top modify

--- a/src/main/webapp/addDatings.html
+++ b/src/main/webapp/addDatings.html
@@ -44,7 +44,7 @@
             <li>
                 <!--<a class="ii-href" id="title-btn"></a>-->
                 <span class="am-badge ad-badge" id="title-text">跑步</span>
-                <i class="am-icon-chevron-right"></i>
+                <i class="am-icon-chevron-right" style="display: none"></i>
                 主题
             </li>
             <li>
