--- a/src/main/webapp/datingRequest.html
+++ b/src/main/webapp/datingRequest.html
@@ -37,6 +37,13 @@
     <link rel="stylesheet" href="assets/css/app.css">
 </head>
 <body class="dr-body">
+<div class="main-side-bar main-top-bar">
+    <div class="am-g main-top">
+        <div class="am-u-sm-4" style="color: grey"><a id="main" style="color:grey;display: block">一起躁</a></div>
+        <div class="am-u-sm-4"><span class="main-top-text">躁友信息</span></div>
+        <div class="am-u-sm-4" style="color: grey"><a id="individualInfo" style="color:grey;display: block">我的信息</a></div>
+    </div>
+</div>
 <div id="dr-null" class="dr-null"></div>
 <div id="dr-main"></div>
 <!--[if (gte IE 9)|!(IE)]><!-->
