--- a/src/main/webapp/individualInfo.html
+++ b/src/main/webapp/individualInfo.html
@@ -37,10 +37,15 @@
     <link rel="stylesheet" href="assets/css/app.css">
 </head>
 <body class="ii-body">
-<div class="ii-container" id="ii-main">
-
+<div class="main-side-bar main-top-bar">
+    <div class="am-g main-top">
+        <div class="am-u-sm-4" style="color: grey"><a id="main" style="color:grey;display: block">一起躁</a></div>
+        <div class="am-u-sm-4" style="color: grey"><a id="datingRequest" style="color:grey;display: block">躁友信息</a></div>
+        <div class="am-u-sm-4"><span class="main-top-text">我的信息</span></div>
+    </div>
 </div>
-
+<div class="ii-container" id="ii-main">
+</div>
 <!--[if (gte IE 9)|!(IE)]><!-->
 <script src="assets/js/jquery.min.js"></script>
 <!--<![endif]-->
