--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -114,7 +114,7 @@
                                 <img src="assets/i/people.png"
                                      class="main-icon-people">
                                 {{#if official}}
-                                <span>{{currentPeople}}人|{{peopleCount}}人</span>
+                                {{currentPeople}}人 | {{peopleCount}}人
                                 {{else}}
                                 <span>单独约</span>
                                 {{/if}}
