--- a/src/main/webapp/timeLine.html
+++ b/src/main/webapp/timeLine.html
@@ -105,13 +105,13 @@
         <li>
             <div class="cbp_tmtime"><span>{{month}}/</span>{{day}}</div>
             <div class="cbp_tmicon">
-                <img src="assets/i/sports/run.png">
+                <img src="{{sportIcon}}">
             </div>
             <div class="cbp_tmlabel">
                 <div><span class="am-text-truncate tl-location">{{location}}</span>
 
                     <div class="tl-people">
-                        <img src="assets/i/people.png" class="tl-icon-people"><span class="tl-green">1/1</span>
+                        <img src="assets/i/people.png" class="tl-icon-people"><span class="tl-green">{{currentPeople}}/{{peopleCount}}</span>
                     </div>
                 </div>
                 <div><span class="tl-item">{{sportName}}</span> <span
