--- a/src/main/webapp/individualInfo.html
+++ b/src/main/webapp/individualInfo.html
@@ -40,7 +40,8 @@
 <div class="main-side-bar main-top-bar">
     <div class="am-g main-top">
         <div class="am-u-sm-4" style="color: grey"><a id="main" style="color:grey;display: block">一起躁</a></div>
-        <div class="am-u-sm-4" style="color: grey"><a id="datingRequest" style="color:grey;display: block">躁友信息</a></div>
+        <div class="am-u-sm-4" style="color: grey"><a id="datingRequest" style="color:grey;display: block">躁友信息</a>
+        </div>
         <div class="am-u-sm-4"><span class="main-top-text">我的信息</span></div>
     </div>
 </div>
@@ -123,11 +124,12 @@
                 体重
             </li>
             <li style="height: 56px">
-                <!--<a class="ii-href" id="sports-btn"></a>-->
-                <span class="am-badge ii-badge"><img src="assets/i/sports/run.png" class="ii-sports"/></span>
-                <span class="am-badge ii-badge"><img src="assets/i/sports/swiming.png" class="ii-sports"/></span>
-                <span class="am-badge ii-badge"><img src="assets/i/sports/yoga.png" class="ii-sports"/></span>
-                <span class="am-badge ii-badge"><img src="assets/i/sports/badminton.png" class="ii-sports"/></span>
+                <span class="am-badge ii-sports">
+                    <a href="selectSports.html?userId={{id}}">
+                        <img src="assets/i/add.png" class="ii-sports-icon"/>
+                    </a>
+                </span>
+                <span class="am-badge ii-sports"><img src="assets/i/sports/run.png" class="ii-sports-icon"/></span>
                 喜欢的运动
             </li>
             <li>
