--- a/src/main/webapp/selectSports.html
+++ b/src/main/webapp/selectSports.html
@@ -34,13 +34,35 @@
     <meta name="msapplication-TileColor" content="#0e90d2">
 
     <link rel="stylesheet" href="assets/css/amazeui.min.css">
+    <link rel="stylesheet" href="assets/css/app.css">
 </head>
 <body style="background-color: gainsboro">
-<div style="width: 100px;margin: 0 auto;padding-top: 50px">
-    <span onclick="selectSports()" class="am-btn am-round am-btn-default" style="color: grey;text-align: right;font-size: 14px;" >
-        <img src="assets/i/sports/run.png" style="width: 25px;height: 25px;margin-right: 8px;">跑步
-        <i class="am-icon-check" style="color: #ff6152"></i>
-    </span>
+<div class="am-container" id="ss-main">
+</div>
+<div style="margin: 0 auto;width: 100px;">
+    <button onclick="selectSports()" class="am-btn am-btn-success am-round" style="width: 100%">
+        确定
+    </button>
+</div>
+<div class="am-modal am-modal-alert" tabindex="-1" id="my-alert">
+    <div class="am-modal-dialog">
+        <div class="am-modal-bd" id="status">
+            发布成功！
+        </div>
+        <div class="am-modal-footer">
+            <span class="am-modal-btn">确定</span>
+        </div>
+    </div>
+</div>
+<div class="am-modal am-modal-alert" tabindex="-1" id="success-alert">
+    <div class="am-modal-dialog">
+        <div class="am-modal-bd" id="success">
+            发布成功！
+        </div>
+        <div class="am-modal-footer">
+            <span class="am-modal-btn" onclick="toPre();">确定</span>
+        </div>
+    </div>
 </div>
 <!--[if (gte IE 9)|!(IE)]><!-->
 <script src="assets/js/jquery.min.js"></script>
@@ -53,6 +75,19 @@
 <script src="assets/js/amazeui.min.js"></script>
 <script src="assets/js/common.js"></script>
 <script src="assets/js/handlebars.min.js"></script>
-<script src="assets/js/selectSports.min.js"></script>
+<script src="assets/js/selectSports.js"></script>
+<script type="text/x-handlebars-template" id="sports">
+
+    <ul class="am-avg-sm-2 am-thumbnails">
+        {{#each this}}
+        <li>
+            <div class="am-round " id="sports{{id}}">
+                <img src="{{iconUrl}}">
+                {{name}}
+            </div>
+        </li>
+        {{/each}}
+    </ul>
+</script>
 </body>
 </html>
