--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -76,7 +76,7 @@
                     <div class="am-u-sm-4 main-left">
                         <div class="main-center">
                             {{#if official}}
-                            <a href="http://www.baidu.com"><img src="{{avatarUrl}}"
+                            <a href="officialInfo.html?orderId={{orderId}}"><img src="{{avatarUrl}}"
                                                                            class="am-radius main-radius"/></a>
                             {{else}}
                             <a href="timeLine.html?userId={{userId}}"><img src="{{avatarUrl}}"
