--- a/src/main/webapp/officialDating.html
+++ b/src/main/webapp/officialDating.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="">
     <meta name="viewport"
           content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>发布邀约信息</title>
+    <title>官方发布邀约信息</title>
 
     <!-- Set render engine for 360 browser -->
     <meta name="renderer" content="webkit">
@@ -222,10 +222,11 @@
 <![endif]-->
 <script src="assets/js/amazeui.min.js"></script>
 <script src="assets/js/spinningwheel.js"></script>
-<script src="assets/js/common.js"></script>
-<script src="assets/js/officialDating.js"></script>
 <script src="ueditor/ueditor.config.js"></script>
 <script src="ueditor/ueditor.all.min.js"></script>
+<script src="assets/js/common.js"></script>
+<script src="assets/js/officialDating.js"></script>
+
 <script>
     $(document).ready(function(){
         var ue = UE.getEditor('introduction');
