selectSport css modify

--- a/src/main/webapp/individualInfo.html
+++ b/src/main/webapp/individualInfo.html
@@ -123,10 +123,11 @@
                 <i class="am-icon-chevron-right"></i>
                 体重
             </li>
-            <li style="height: 56px">
+            <li style="height: 56px;padding-top: 16px">
                 <span class="am-badge ii-sports">
                     <a href="selectSports.html?userId={{id}}">
-                        <img src="assets/i/add.png" class="ii-sports-icon"/>
+                        <i class="am-icon-plus-circle am-icon-lg" style="color: grey;margin-top: -7px;"></i>
+                        <!--<img src="assets/i/add.png" class="ii-sports-icon"/>-->
                     </a>
                 </span>
                 {{#each sports}}
