--- a/src/main/webapp/selectSports.html
+++ b/src/main/webapp/selectSports.html
@@ -37,11 +37,11 @@
     <link rel="stylesheet" href="assets/css/app.css">
 </head>
 <body style="background-color: gainsboro">
-<div class="am-container" id="ss-main">
+<div class="am-container" id="ss-main" style="margin-top: 150px;padding-right: 30px;padding-left: 30px">
 </div>
-<div style="margin: 0 auto;width: 100px;">
+<div style="margin: 20px auto;width: 100px;">
     <button onclick="selectSports()" class="am-btn am-btn-success am-round" style="width: 100%">
-        确定
+        好 哒
     </button>
 </div>
 <div class="am-modal am-modal-alert" tabindex="-1" id="my-alert">
@@ -77,16 +77,16 @@
 <script src="assets/js/handlebars.min.js"></script>
 <script src="assets/js/selectSports.js"></script>
 <script type="text/x-handlebars-template" id="sports">
-
-    <ul class="am-avg-sm-2 am-thumbnails">
+    <ul class="am-avg-sm-5 am-thumbnails">
         {{#each this}}
         <li>
-            <div class="am-round " id="sports{{id}}">
-                <img src="{{iconUrl}}">
-                {{name}}
+            <div class="am-round ">
+                <img src="{{iconUrl}}" id="sports{{id}}">
+
+                <div class="am-round ss-cover" id="sportsCover{{id}}"></div>
+                <!--{{name}}-->
             </div>
         </li>
-        {{/each}}
     </ul>
 </script>
 </body>
