--- a/src/main/webapp/selectSports.html
+++ b/src/main/webapp/selectSports.html
@@ -36,7 +36,7 @@
     <link rel="stylesheet" href="assets/css/amazeui.min.css">
     <link rel="stylesheet" href="assets/css/app.css">
 </head>
-<body style="background-color: gainsboro">
+<body>
 <div class="am-container" id="ss-main" style="margin-top: 150px;padding-right: 30px;padding-left: 30px">
 </div>
 <div style="margin: 20px auto;width: 100px;">
