--- a/src/main/webapp/officialDating.html
+++ b/src/main/webapp/officialDating.html
@@ -224,6 +224,7 @@
 <script src="assets/js/spinningwheel.js"></script>
 <script src="ueditor/ueditor.config.js"></script>
 <script src="ueditor/ueditor.all.min.js"></script>
+<script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
 <script src="assets/js/common.js"></script>
 <script src="assets/js/officialDating.js"></script>
 
