--- a/src/main/webapp/addDatings.html
+++ b/src/main/webapp/addDatings.html
@@ -200,6 +200,7 @@
 <![endif]-->
 <script src="assets/js/amazeui.min.js"></script>
 <script src="assets/js/spinningwheel.js"></script>
+<script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
 <script src="assets/js/common.js"></script>
 <script src="assets/js/addDating.js"></script>
 </body>
