--- a/src/main/webapp/selectSports.html
+++ b/src/main/webapp/selectSports.html
@@ -73,6 +73,7 @@
 <script src="assets/js/amazeui.ie8polyfill.min.js"></script>
 <![endif]-->
 <script src="assets/js/amazeui.min.js"></script>
+<script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
 <script src="assets/js/common.js"></script>
 <script src="assets/js/handlebars.min.js"></script>
 <script src="assets/js/selectSports.js"></script>
