添加主题选择

--- a/src/main/webapp/individualInfo.html
+++ b/src/main/webapp/individualInfo.html
@@ -91,11 +91,11 @@
                 <i class="am-icon-chevron-right"></i>
                 时光轴
             </li>
-            <li>
-                <a class="ii-href" href="datingRequest.html?userId={{id}}"></a>
-                <i class="am-icon-chevron-right"></i>
-                我的约伴
-            </li>
+            <!--<li>-->
+            <!--<a class="ii-href" href="datingRequest.html?userId={{id}}"></a>-->
+            <!--<i class="am-icon-chevron-right"></i>-->
+            <!--我的约伴-->
+            <!--</li>-->
         </ul>
     </div>
     <div class="ii-info">
