--- a/src/main/webapp/selectSports.html
+++ b/src/main/webapp/selectSports.html
@@ -40,7 +40,7 @@
 <div class="am-container" id="ss-main" style="margin-top: 100px;padding-right: 30px;padding-left: 30px">
 </div>
 <div style="margin: 20px auto;width: 100px;">
-    <button onclick="selectSports()" class="am-btn am-btn-success am-round" style="width: 100%">
+    <button onclick="selectSports()" class="am-btn am-btn-success am-round am-btn-lg" style="width: 100%">
         好 哒
     </button>
 </div>
